# Resturant-Management-System

./: CMakeLists.txt  login.db  main.cpp  ordertable.db  res.qrc  rms.cpp  rms.h  rms.ui  saal.db
